# mimic-bot

./: Cargo.toml  Dockerfile  README.md  docker-compose.yml
src/: brain.rs  config.rs  main.rs
src/brain/: chains_pack.rs  types.rs
